src/components/ProgressionStatus/ProgressionStatus.scss
@import "../../colors.scss";

.progression-status {
  display: flex;
  flex-direction: column;
  justify-content: center;

  width: 100%;
  height: 15vh;

  padding: 1rem;

  box-sizing: border-box;
}

.progression-info {
  display: flex;
  justify-content: space-between;
  align-items: end;

  border-bottom: 3px solid $primary-color-2;
  margin-bottom: 0.25rem;
}

.progress-bar {
  position: relative; // Only for the incomplete-text

  width: 100%;
  background-color: $primary-color-2;

  border-radius: 8px;
  
  overflow: hidden;
  text-align: right;
  
  .progress-complete-text {
    color: $primary-color-1;
    margin: 0 0.5rem;
  }
  .progress-bar-complete {
    height: 100%;
    border-radius: 8px;

    // This is to keep the complete on the right hand side of the bar
    text-align: right;
  }

  .progress-undefined {
    background-color: $primary-color-3;
  }
}

